# trend_classifier

./: README.md
trend_classifier/: main.py  pyproject.toml
trend_classifier/utils/configs/: general_configs.py  queries_schemas.py
trend_classifier/utils/functions/: fetch_pandas.py  get_prophet_weekly_forecast.py  get_weekly_volume.py
trend_classifier/utils/functions/prophet_forecasting/: backtest_mape_last_weeks.py
trend_classifier/utils/functions/trend_classifier/: auto_label_trend.py  extract_features.py
trend_classifier/utils/queries/: data_extraction_query.sql
trend_classifier/utils/scripts/: data_extraction.py  prophet_forecast.py
